Updated code with @Annotations, Reduced LExtra Logic